Nov 4, 2002

* FIXED: Fetching VARCHAR/VARBINARY columns with value NULL and column-width
  > 1024.  Mike Elston.

Oct 24, 2002

* FIXED: Work around SQL Server bug reporting the number of columns in
  SQLColumns() as 19 rather than 12.  Steve Moyle.

Oct 23, 2002

* FIXED: Work around Postgress driver bug not support GetData properly.
  Steve Moyle.

Sep 30, 2002

* FIXED: stripped the left 24 characters of LONGVAR* types.  Thomas Moraitis.

Sep 27, 2002

* FIXED: fetch LONGVAR* types properly in drivers that do not produce
  the length of the longest column (MS-Access).  Thomas Moraitis.

Sep 25, 2002

* FIXED: proper handling of BINARY data-types.  Spotted by
  Wouter Jansweijer.

Sep 19, 2002

* FIXED: type-specifier use second argument as scale argument (i.e.
  decimal(14,2).  Mike Elston.

Sep 15, 2002

* FIXED: increase column-width for DECIMAL columns as the interface doesn't
  appear to consider the decimal dot when providing the column width.

Jul 24, 2002

* FIXED: Check malloc() return and use PL_* allocation where necessary.

Jul 17, 2002

* ADDED: consistency check betweem declared and used parameters in
  odbc_prepare/5 based on SQLNumParams().

Jul 16, 2002

* Fixed problem with pre-fetching if rows are partially instantiated.
  Petter Egesund.

Jul 13, 2002

* Fixed handling default in types(Types) option of odbc_query.

* Many textual improvements in the documentation.

Jul 12, 2002

* Add alpha findall/2 option to odbc_query/4 and odbc_prepare/5.

* Add number of rows affected return to odbc_query/4 and odbc_execute/2.

* Succeed deterministically if last value is retrieved.

* Documentation updates

Jul 10, 2002

* Provide access to source (table and column) of result-columns.

Jul 9, 2002

* Added writing NULL-data with prepared statements.

* Added programmable NULL-data representation (Mike Elston).

Jul 7, 2002

* Initial alpha release.